analysis/low-level-api-fir/testData/lazyResolve/errors/danglingAnnotationTopLevelFunction2.kt
annotation class Ann

@Ann(""
fun <caret>foo() = 42
@Ann